[package]
name = "cold"
version = "0.1.0"
authors = ["Angelo Lupo <angelo.lupo@fundingoptions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.104"
alt_serde_derive = "1.0.104"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.9.0"

